crew/crew.css
#header {
    background-color: cadetblue;
    background-image: url("../images/spacex-crew-small.jpeg");
    background-position: center;
}

#crewPopup {
    top: 10%;
    bottom: 10%;
    left: 50px;
    right: 50px;
}

#crewPopup .popupContent {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    overflow-y: scroll;
    height: calc(100% - 24px);
}

.galleryItem {
    width: 200px;
    height: 300px;
    margin: 5px;
    cursor: pointer;
}

.galleryItem > .imageContainer {
    width: 100%;
    height: calc(100% - 25px);
    background-color: black;
    display: flex;
    align-items: center;
}

.galleryItem > span {
    height: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.imageContainer > img {
    width: 100%;
    aspect-ratio: initial;
}

#crewTile > div > div {
    font-size: 60px;
    font-weight: bolder;
}

.bootstrapPopupContent {
    display: flex;
    justify-content: space-around;
}

#crewPopupCarousel .carouselImageContainer > img {
    height: 60vh;
    aspect-ratio: initial;
}

#crewPopup .galleryPopup {
    height: 60vh;
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    overflow-y: scroll;
}

